vlib/v/checker/tests/import_mod_duplicate_err.out
vlib/v/checker/tests/import_mod_duplicate_err.vv:3:8: error: cannot import `json` into a module with the same name
    1 | module json
    2 | 
    3 | import json
      |        ~~~~
    4 | 
    5 | const used = true
vlib/v/checker/tests/import_mod_duplicate_err.vv:3:8: error: cannot import `json` as `json` into a module with the same name
    1 | module json
    2 | 
    3 | import json
      |        ~~~~
    4 | 
    5 | const used = true
vlib/v/checker/tests/import_mod_duplicate_err.vv:1:1: error: project must include a `main` module or be a shared library (compile with `v -shared`)
    1 | module json
      | ^
    2 | 
    3 | import json
