vlib/v/checker/tests/import_mod_duplicate_err.vv
module json

import json

const used = true

println(json.used)
